# Tamsarobot

./: AIAlpha.ipynb  README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/lib/odometry4/: odometry4
catkin_ws/devel/lib/pkgconfig/: odometry4.pc  robot_setup_tf.pc
catkin_ws/devel/lib/robot_setup_tf/: robot_setup_tf
catkin_ws/devel/share/odometry4/cmake/: odometry4-msg-paths.cmake  odometry4Config.cmake
catkin_ws/devel/share/robot_setup_tf/cmake/: robot_setup_tfConfig.cmake
catkin_ws/install/: setup.sh
catkin_ws/install/include/odometry4/: MyOdometry4.h
catkin_ws/install/lib/pkgconfig/: odometry4.pc
catkin_ws/install/share/odometry4/: package.xml
catkin_ws/install/share/odometry4/cmake/: odometry4-msg-paths.cmake
catkin_ws/src/odometry4/: CMakeLists.txt
catkin_ws/src/odometry4/src/: odometry_publisher.cpp
catkin_ws/src/robot_setup_tf/: CMakeLists.txt
catkin_ws/src/robot_setup_tf/src/: tf_broadcaster.cpp
ros_workspace/devel/: .catkin  .rosinstall  setup.sh
ros_workspace/roamy_2dnav/: base_local_planner_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  hydro_map2.yaml  hydromap.yaml  indigo.rviz  indigo_map.yaml  mainpage.dox  manifest.xml  move_base.yaml  move_base_all.launch  move_base_all.launch~  move_base_corrected.launch  move_base_corrected.launch~  move_base_dwa.launch  navigation.launch  navigation_corrected.launch  roamy_configuration.launch
ros_workspace/roamy_2dnav/etc/: hydro_roamy.rviz  kobuki_nav.rviz  move_base.launch  move_base2.launch  move_base_hydro.launch  nav_rviz.vcg  odom_TF_MAP.vcg  roamy.rviz  roamy_costmap.yaml  slam.launch
ros_workspace/roamy_2dnav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  default_move_base.yaml  default_move_base.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base.yaml~
ros_workspace/robot_mover/: manifest.xml
ros_workspace/robot_mover/nodes/: mover.py  mover.py~
sketchbook/libraries/ros_lib/odometry4/: MyOdometry4.h
sketchbook/libraries/ros_lib/rosgraph_msgs/: TopicStatistics.h
sketchbook/odometry4_Encoder_BLDC_20140511/: odometry4_Encoder_BLDC_20140511.ino
(+8 files in other folders)
